Use module for core to support latest tornadofx snapshot version, support runAsync in controller for long-running tasks.